# ClaudeTest

./: .gitattributes  .gitignore  AGENT.md  CLAUDE.md  ClaudeTest.sln  ClaudeTest.vcxproj  ClaudeTest.vcxproj.filters  main.cpp  start-claude.ps1
AGENT/: AGENT.md  GAME.md
ClaudeTest/x64/Debug/: ClaudeTest.exe.recipe  ClaudeTest.ilk  vc143.idb
Engine/DirectX12/: DirectX12.cpp  DirectX12.h  DirectX12Window.cpp  DirectX12Window.h
Engine/Renderer/: ID3D12GraphicsCommandList.h
Engine/Window/: Window.cpp  Window.h
source/: CLI.cpp  CLI.h  main.cpp
source/Actor/Pipe/: Pipe.cpp  Pipe.h
source/Actor/Player/: Player.cpp  Player.h
source/Define/: Constants.h
source/Game/: CMakeLists.txt  MainGame.cpp  MainGame.h
source/Game/System/: CollisionSystem.cpp  CollisionSystem.h  InputManager.cpp  InputManager.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  ScoreManager.cpp  ScoreManager.h
